<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_books"
            android:icon="@drawable/ic_books"
            android:title="@string/menu_books" />

        <item
            android:id="@+id/nav_movies"
            android:icon="@drawable/ic_movies"
            android:title="@string/menu_movies" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/menu_profile" />
    </group>

    <item android:title="@string/menu_admin_section">
        <menu>
            <item
                android:id="@+id/nav_admin"
                android:icon="@drawable/ic_admin"
                android:title="@string/menu_admin_users"
                android:visible="false" />
        </menu>
    </item>

    <item android:title="@string/menu_other">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/menu_logout" />
        </menu>
    </item>
</menu>