<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.principal.ui.auth.LoginFragment"
        android:label="fragment_login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_login_to_register"
            app:destination="@id/registerFragment" />
        <action
            android:id="@+id/action_login_to_main"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/registerFragment"
        android:name="com.example.principal.ui.auth.RegisterFragment"
        android:label="fragment_register"
        tools:layout="@layout/fragment_register">
        <action
            android:id="@+id/action_register_to_login"
            app:destination="@id/loginFragment" />
    </fragment>

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.principal.ui.main.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/booksFragment"
        android:name="com.example.principal.ui.main.BooksFragment"
        android:label="@string/menu_books"
        tools:layout="@layout/fragment_books" />

    <fragment
        android:id="@+id/moviesFragment"
        android:name="com.example.principal.ui.main.MoviesFragment"
        android:label="@string/menu_movies"
        tools:layout="@layout/fragment_movies" />

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.principal.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/adminFragment"
        android:name="com.example.principal.ui.admin.AdminFragment"
        android:label="@string/menu_admin_users"
        tools:layout="@layout/fragment_admin" />
    <fragment
        android:id="@+id/splashFragment"
        android:name="com.example.principal.ui.auth.SplashFragment"
        android:label="fragment_splash"
        tools:layout="@layout/fragment_splash">
        <action
            android:id="@+id/action_splash_to_login"
            app:destination="@id/loginFragment" />
        <action
            android:id="@+id/action_splash_to_main"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <action
        android:id="@+id/action_global_loginFragment"
        app:destination="@id/loginFragment"
        app:popUpTo="@+id/nav_graph"
        app:popUpToInclusive="true" />
</navigation>